fix:scrollbar css 修改

--- a/src/sass/page/layout.scss
+++ b/src/sass/page/layout.scss
@@ -578,9 +578,9 @@ main {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
   .header,
   .main {
     margin-left: rem(252);
